--- a/regular.css
+++ b/regular.css
@@ -14,6 +14,8 @@ a {
     left: 0px;
     width: calc(100% - 32px);
     padding: 16px;
+    display: block;
+    overflow-wrap: break-word;
 }
 
 .online-icon {
@@ -63,11 +65,13 @@ a {
     position: fixed;
     top: 16px;
     right: 16px;
+    z-index: 1000;
 }
 
 .apis-notice {
     position: absolute;
     left: 50%;
+    transform: translate(-50%);
 }
 
 code {
@@ -79,4 +83,9 @@ pre {
     background: black;
     display: block;
     width: calc(100% - 32px);
+}
+
+.vmsetlink {
+    text-decoration: none;
+    color: white;
 }
