--- a/regular.css
+++ b/regular.css
@@ -107,3 +107,12 @@ pre {
     text-decoration: none;
     color: white;
 }
+
+.hideWithoutHover {
+    background: #373737;
+    color: #373737;
+}
+
+.hideWithoutHover:hover {
+    color: white;
+}
